combine movie fixes

--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -168,6 +168,7 @@
     "MessageNothingHere": "Nothing here.",
     "MessagePleaseEnsureInternetMetadata": "Please ensure downloading of internet metadata is enabled.",
     "TabSuggested": "Suggested",
+    "TabSuggestions": "Suggestions",
     "TabLatest": "Latest",
     "TabUpcoming": "Upcoming",
     "TabShows": "Shows",
