add sports to suggested tv

--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -913,7 +913,7 @@
     "OptionDefaultSort": "Default",
     "OptionCommunityMostWatchedSort": "Most Watched",
     "TabNextUp": "Next Up",
-    "PlaceholderUsername":  "Username",
+    "PlaceholderUsername": "Username",
     "HeaderBecomeProjectSupporter": "Become an Emby Supporter",
     "MessageNoMovieSuggestionsAvailable": "No movie suggestions are currently available. Start watching and rating your movies, and then come back to view your recommendations.",
     "MessageNoCollectionsAvailable": "Collections allow you to enjoy personalized groupings of Movies, Series, Albums, Books and Games. Click the + button to start creating Collections.",
@@ -1399,6 +1399,7 @@
     "LabelEnableInternetMetadataForTvPrograms": "Download internet metadata for:",
     "OptionTVMovies": "TV Movies",
     "HeaderUpcomingMovies": "Upcoming Movies",
+    "HeaderUpcomingSports": "Upcoming Sports",
     "HeaderUpcomingPrograms": "Upcoming Programs",
     "ButtonMoreItems": "More...",
     "LabelShowLibraryTileNames": "Show library tile names",
